feat: adicionando event-binding
Adicionando captura e manipulação de DOM a partir de eventos

--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-data-binding></app-data-binding> -->
-<app-data-binding-style></app-data-binding-style>
+<!-- <app-data-binding-style></app-data-binding-style> -->
+<app-event-binding></app-event-binding>
