--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-data-binding></app-data-binding> -->
 <!-- <app-data-binding-style></app-data-binding-style> -->
-<app-event-binding></app-event-binding>
+<!-- <app-event-binding></app-event-binding> -->
+<app-two-way-binding></app-two-way-binding>
