feat: input e output properties
Adicionando propriedades e passando-as por componente

--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-data-binding></app-data-binding> -->
 <!-- <app-data-binding-style></app-data-binding-style> -->
 <!-- <app-event-binding></app-event-binding> -->
-<app-two-way-binding></app-two-way-binding>
+<!-- <app-two-way-binding></app-two-way-binding> -->
+<app-input-output-properties></app-input-output-properties>
