--- a/data-binding/src/app/input-output-properties/input-output-properties.component.html
+++ b/data-binding/src/app/input-output-properties/input-output-properties.component.html
@@ -1,6 +1,7 @@
 <section>
   <article>
     <h3>Input/Output Properties</h3>
-    <app-input-output-properties-component [nome]="nome"></app-input-output-properties-component>
+    <app-curso [nome]="nome"></app-curso>
+    <app-contador (mudouValor)="novoValor($event)" valor="0"></app-contador>
   </article>
 </section>
