--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -3,8 +3,9 @@
 <!-- <app-event-binding></app-event-binding> -->
 <!-- <app-two-way-binding></app-two-way-binding> -->
 <!-- <app-input-output-properties></app-input-output-properties> -->
-<app-ciclo *ngIf="!cicloRemovido" [valor]="valorInicial"></app-ciclo>
+<!-- <app-ciclo *ngIf="!cicloRemovido" [valor]="valorInicial"></app-ciclo>
 <div>
   <button (click)="mudarValor()">Mudar Valor</button>
   <button (click)="removerCiclo()">Remover Ciclo</button>
-</div>
+</div> -->
+<app-acesso-dom></app-acesso-dom>
