feat: adicionando diretiva ng-content
Adicionando diretiva ng-content que permite injeção de conteúdo HTML no componente

OBS: funcionamento semelhante ao <template> do Vue (porém mais fácil de usar)

--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -3,4 +3,12 @@
 <!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
-<app-elvis-operator></app-elvis-operator>
+<!-- <app-elvis-operator></app-elvis-operator> -->
+<!-- <app-diretiva-ngcontent>
+  <h2>Conteudo</h2>
+  teste
+</app-diretiva-ngcontent> -->
+<!-- <app-diretiva-ngcontent>
+  <div id="titulo">Titulo Injetado</div>
+  <div class="corpo">Corpo injetado</div>
+</app-diretiva-ngcontent> -->
