--- a/diretivas/src/app/diretiva-customizada/diretiva-customizada.component.html
+++ b/diretivas/src/app/diretiva-customizada/diretiva-customizada.component.html
@@ -1,2 +1,3 @@
 <p fundoAmarelo>Fundo Amarelo</p>
 <button fundoAmarelo>Botão com fundo amarelo</button>
+<p highlightMouse>Highlight ao passar o mouse</p>
