feat: adicionando pipe puro
Adicionando pipe puro (não vê mudanças na variável de entrada)

OBS: o pipe de array usado como exemplo não é uma boa prática. Não utilizar em produção

--- a/pipes/src/app/exemplo-pipes/exemplo-pipes.component.html
+++ b/pipes/src/app/exemplo-pipes/exemplo-pipes.component.html
@@ -8,3 +8,12 @@
 <p>Url: {{ livro.url }}</p>
 <br />
 <p>Livro: {{ livro | json }}</p>
+
+<input type="text" [(ngModel)]="filtro">
+<br>
+<input type="text" #novoCursoInput>
+<button (click)="addLivro(novoCursoInput.value)">Adicionar Curso</button>
+<br>
+<ul>
+  <li *ngFor="let livroNome of livros | filtroArray:filtro ">{{ livroNome }}</li>
+</ul>
