feat: adicionando pipe assincrono
Adicionando pipe para dados assíncronos

--- a/pipes/src/app/exemplo-pipes/exemplo-pipes.component.html
+++ b/pipes/src/app/exemplo-pipes/exemplo-pipes.component.html
@@ -29,3 +29,5 @@
 <ul>
   <li *ngFor="let livroNome of obterLivrosFiltrados()">{{ livroNome }}</li>
 </ul>
+
+<p>Pipe Assincrono: {{ valorAssincrono | async }}</p>
