feat: capturando parametros da rota
Capturando parâmetros de uma rota utilizando o ActivatedRoute

--- a/roteamento/src/app/app.component.html
+++ b/roteamento/src/app/app.component.html
@@ -4,8 +4,14 @@
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
       <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active">
+        <a [routerLink]="['cursos', inputIdCurso.value]">Curso com Id</a>
+      </li>
     </ul>
   </div>
 </nav>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <input type="text" #inputIdCurso />
+  <router-outlet></router-outlet>
+</div>
