feat: realizando redirecionamento via codigo
Trabalhando com Router e simulação de service para busca de detalhes sobre objeto

--- a/roteamento/src/app/cursos/cursos.component.html
+++ b/roteamento/src/app/cursos/cursos.component.html
@@ -1,1 +1,10 @@
-<p>cursos works!</p>
+<p>Lista de cursos</p>
+<div class="collection">
+  <a
+    [routerLink]="['/cursos', curso.id]"
+    routerLinkActive="router-link-active"
+    *ngFor="let curso of cursos"
+    class="collection-item"
+    >{{ curso?.nome }}</a
+  >
+</div>
