--- a/roteamento/src/app/cursos/cursos.component.html
+++ b/roteamento/src/app/cursos/cursos.component.html
@@ -1,4 +1,5 @@
 <p>Lista de cursos</p>
+<p>Página: {{ pagina }}</p>
 <div class="collection">
   <a
     [routerLink]="['/cursos', curso.id]"
@@ -8,3 +9,4 @@
     >{{ curso?.nome }}</a
   >
 </div>
+<button (click)="proximaPagina()">Próxima Página</button>
