feat: ajustando roteamento com lazy-loading dos alunos
Corrigindo problema do carregamento da rota de alunos

--- a/roteamento/src/app/alunos/alunos.component.html
+++ b/roteamento/src/app/alunos/alunos.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col s6">
+    <h5>Listagem dos alunos</h5>
     <div class="collection">
       <a
         *ngFor="let aluno of alunos"
