--- a/roteamento/src/app/login/login.component.html
+++ b/roteamento/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<h5>Login</h5>
+
+<div class="row">
+  <div class="input-field col s6">
+    <input id="nome" type="text" class="validate" />
+    <label for="nome">Nome</label>
+  </div>
+</div>
+
+<div class="row">
+  <div class="input-field col s6">
+    <input id="senha" type="text" class="validate" />
+    <label for="senha">Senha</label>
+  </div>
+</div>
