--- a/roteamento/src/app/app.component.html
+++ b/roteamento/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav *ngIf="usuarioAutenticado">
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo right">Logo</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
