--- a/roteamento/src/app/login/login.component.html
+++ b/roteamento/src/app/login/login.component.html
@@ -2,14 +2,27 @@
 
 <div class="row">
   <div class="input-field col s6">
-    <input id="nome" type="text" class="validate" />
+    <input [(ngModel)]="usuario.nome" id="nome" type="text" class="validate" />
     <label for="nome">Nome</label>
   </div>
 </div>
 
 <div class="row">
   <div class="input-field col s6">
-    <input id="senha" type="text" class="validate" />
+    <input
+      [(ngModel)]="usuario.senha"
+      id="senha"
+      type="password"
+      class="validate"
+    />
     <label for="senha">Senha</label>
   </div>
 </div>
+
+<button
+  (click)="realizarLogin()"
+  type="submit"
+  class="waves-effect waves-light btn"
+>
+  Entrar
+</button>
