--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -1,11 +1,13 @@
-<form>
+<form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <div class="form-group">
     <label for="nome">Nome</label>
     <input
       type="text"
       class="form-control"
       id="nome"
+      name="nome"
       placeholder="Informe seu nome"
+      ngModel
     />
   </div>
   <div class="form-group">
@@ -14,7 +16,9 @@
       type="email"
       class="form-control"
       id="email"
+      name="email"
       placeholder="nome@email.com"
+      ngModel
     />
   </div>
 
