--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -7,7 +7,7 @@
       id="nome"
       name="nome"
       placeholder="Informe seu nome"
-      ngModel
+      [ngModel]="usuario.nome"
     />
   </div>
   <div class="form-group">
@@ -18,7 +18,7 @@
       id="email"
       name="email"
       placeholder="nome@email.com"
-      ngModel
+      [ngModel]="usuario.email"
     />
   </div>
 
