--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -8,6 +8,7 @@
       name="nome"
       placeholder="Informe seu nome"
       [ngModel]="usuario.nome"
+      required
     />
   </div>
   <div class="form-group">
@@ -19,6 +20,8 @@
       name="email"
       placeholder="nome@email.com"
       [ngModel]="usuario.email"
+      required
+      email
     />
   </div>
 
