--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -9,6 +9,7 @@
       placeholder="Informe seu nome"
       [ngModel]="usuario.nome"
       required
+      #nome
     />
   </div>
   <div class="form-group">
