feat: usando variaveis e ngModel para validacoes personalizadas
Usando variáveis locais, juntamente com ngModel para validar campos de maneira personalizada, podendo utilizar lógica dos frameworks CSS

--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -4,26 +4,31 @@
     <input
       type="text"
       class="form-control"
+      [class.is-invalid]="!nome.valid && nome.touched"
       id="nome"
       name="nome"
       placeholder="Informe seu nome"
       [ngModel]="usuario.nome"
       required
-      #nome
+      #nome="ngModel"
     />
+    <div class="invalid-feedback">Informe um nome válido</div>
   </div>
   <div class="form-group">
     <label for="email">Email</label>
     <input
       type="email"
       class="form-control"
+      [class.is-invalid]="!email.valid && email.touched"
       id="email"
       name="email"
       placeholder="nome@email.com"
       [ngModel]="usuario.email"
       required
       email
+      #email="ngModel"
     />
+    <div class="invalid-feedback">Informe um email válido</div>
   </div>
 
   <button type="submit" class="btn btn-primary">Enviar</button>
