feat: desabilitando botao de submit se o formulario for invalido
Desativacao do botao de envio utilizando validacao de form

--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -31,5 +31,7 @@
     <div class="invalid-feedback">Informe um email válido</div>
   </div>
 
-  <button type="submit" class="btn btn-primary">Enviar</button>
+  <button [disabled]="!f.valid" type="submit" class="btn btn-primary">
+    Enviar
+  </button>
 </form>
