--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -34,4 +34,6 @@
   <button [disabled]="!f.valid" type="submit" class="btn btn-primary">
     Enviar
   </button>
+
+  <app-form-debug [form]="f"></app-form-debug>
 </form>
