feat: adicionando novos campos no form
Adicionando novos campos de endereço no form

--- a/forms/src/app/form-debug/form-debug.component.html
+++ b/forms/src/app/form-debug/form-debug.component.html
@@ -1,12 +1,6 @@
 <div style="margin-top: 20px">
   <div>Detalhes do Form</div>
-  <pre>
-    Form Válido: {{ form.valid }}
-  </pre>
-  <pre>
-    Form submetido: {{ form.submitted }}
-  </pre>
-  <pre>
-    Valores: <br>{{ form.value | json }}
-  </pre>
+  <pre>Form Válido: {{ form.valid }}</pre>
+  <pre>Form submetido: {{ form.submitted }}</pre>
+  <pre>Valores:<br>{{ form.value | json }}</pre>
 </div>
