--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -1,39 +1,173 @@
-<form #f="ngForm" (ngSubmit)="onSubmit(f)">
-  <div class="form-group">
-    <label for="nome">Nome</label>
-    <input
-      type="text"
-      class="form-control"
-      [class.is-invalid]="!nome.valid && nome.touched"
-      id="nome"
-      name="nome"
-      placeholder="Informe seu nome"
-      [ngModel]="usuario.nome"
-      required
-      #nome="ngModel"
-    />
-    <div class="invalid-feedback">Informe um nome válido</div>
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" class="form-horizontal">
+  <div class="form-group row">
+    <div class="col-sm-12">
+      <label for="nome">Nome</label>
+    </div>
+
+    <div class="col-sm-12">
+      <input
+        type="text"
+        class="form-control"
+        [class.is-invalid]="!nome.valid && nome.touched"
+        id="nome"
+        name="nome"
+        placeholder="Informe seu nome"
+        [ngModel]="usuario.nome"
+        required
+        #nome="ngModel"
+      />
+      <div class="invalid-feedback">Informe um nome válido</div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input
-      type="email"
-      class="form-control"
-      [class.is-invalid]="!email.valid && email.touched"
-      id="email"
-      name="email"
-      placeholder="nome@email.com"
-      [ngModel]="usuario.email"
-      required
-      email
-      #email="ngModel"
-    />
-    <div class="invalid-feedback">Informe um email válido</div>
+  <div class="form-group row">
+    <div class="col-sm-12">
+      <label for="email">Email</label>
+    </div>
+
+    <div class="col-sm-12">
+      <input
+        type="email"
+        class="form-control"
+        [class.is-invalid]="!email.valid && email.touched"
+        id="email"
+        name="email"
+        placeholder="nome@email.com"
+        [ngModel]="usuario.email"
+        required
+        email
+        #email="ngModel"
+      />
+      <div class="invalid-feedback">Informe um email válido</div>
+    </div>
   </div>
 
-  <button [disabled]="!f.valid" type="submit" class="btn btn-primary">
-    Enviar
-  </button>
+  <div class="form-group row">
+    <div class="col-sm-3">
+      <label for="cep">CEP</label>
+      <input
+        type="cep"
+        class="form-control"
+        [class.is-invalid]="!cep.valid && cep.touched"
+        id="cep"
+        name="cep"
+        [ngModel]="usuario.cep"
+        required
+        cep
+        #cep="ngModel"
+      />
+      <div class="invalid-feedback">Informe um CEP válido</div>
+    </div>
 
-  <app-form-debug [form]="f"></app-form-debug>
+    <div class="col-sm-3">
+      <label for="numero">Número</label>
+      <input
+        type="numero"
+        class="form-control"
+        [class.is-invalid]="!numero.valid && numero.touched"
+        id="numero"
+        name="numero"
+        [ngModel]="usuario.numero"
+        required
+        numero
+        #numero="ngModel"
+      />
+      <div class="invalid-feedback">Informe um número válido</div>
+    </div>
+
+    <div class="col-sm-6">
+      <label for="complemento">Complemento</label>
+      <input
+        type="complemento"
+        class="form-control"
+        [class.is-invalid]="!complemento.valid && complemento.touched"
+        id="complemento"
+        name="complemento"
+        [ngModel]="usuario.complemento"
+        required
+        complemento
+        #complemento="ngModel"
+      />
+      <div class="invalid-feedback">Informe um complemento válido</div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <div class="col-sm-12">
+      <label for="rua">Rua</label>
+      <input
+        type="rua"
+        class="form-control"
+        [class.is-invalid]="!rua.valid && rua.touched"
+        id="rua"
+        name="rua"
+        [ngModel]="usuario.rua"
+        required
+        readonly
+        rua
+        #rua="ngModel"
+      />
+      <div class="invalid-feedback">Informe um rua válida</div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <div class="col-sm-5">
+      <label for="bairro">Bairro</label>
+      <input
+        type="bairro"
+        class="form-control"
+        [class.is-invalid]="!bairro.valid && bairro.touched"
+        id="bairro"
+        name="bairro"
+        [ngModel]="usuario.bairro"
+        readonly
+        required
+        bairro
+        #bairro="ngModel"
+      />
+      <div class="invalid-feedback">Informe um bairro válido</div>
+    </div>
+
+    <div class="col-sm-4">
+      <label for="cidade">Cidade</label>
+      <input
+        type="cidade"
+        class="form-control"
+        [class.is-invalid]="!cidade.valid && cidade.touched"
+        id="cidade"
+        name="cidade"
+        [ngModel]="usuario.cidade"
+        required
+        readonly
+        cidade
+        #cidade="ngModel"
+      />
+      <div class="invalid-feedback">Informe uma cidade válida</div>
+    </div>
+
+    <div class="col-sm-3">
+      <label for="estado">Estado</label>
+      <input
+        type="estado"
+        class="form-control"
+        [class.is-invalid]="!estado.valid && estado.touched"
+        id="estado"
+        name="estado"
+        [ngModel]="usuario.estado"
+        required
+        readonly
+        estado
+        #estado="ngModel"
+      />
+      <div class="invalid-feedback">Informe um estado válido</div>
+    </div>
+  </div>
+
+  <div class="col-sm-3 row">
+    <button [disabled]="!f.valid" type="submit" class="btn btn-primary">
+      Enviar
+    </button>
+
+    <app-form-debug [form]="f"></app-form-debug>
+  </div>
 </form>
