--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -41,124 +41,126 @@
     </div>
   </div>
 
-  <div class="form-group row">
-    <div class="col-sm-3">
-      <label for="cep">CEP</label>
-      <input
-        type="cep"
-        class="form-control"
-        [ngClass]="aplicaCssErro(cep)"
-        id="cep"
-        name="cep"
-        [ngModel]="usuario.cep"
-        required
-        cep
-        #cep="ngModel"
-      />
-      <div class="invalid-feedback">Informe um CEP válido</div>
+  <div ngModelGroup="endereco">
+    <div class="form-group row">
+      <div class="col-sm-3">
+        <label for="cep">CEP</label>
+        <input
+          type="cep"
+          class="form-control"
+          [ngClass]="aplicaCssErro(cep)"
+          id="cep"
+          name="cep"
+          [ngModel]="usuario.cep"
+          required
+          cep
+          #cep="ngModel"
+        />
+        <div class="invalid-feedback">Informe um CEP válido</div>
+      </div>
+
+      <div class="col-sm-3">
+        <label for="numero">Número</label>
+        <input
+          type="numero"
+          class="form-control"
+          [ngClass]="aplicaCssErro(numero)"
+          id="numero"
+          name="numero"
+          [ngModel]="usuario.numero"
+          required
+          numero
+          #numero="ngModel"
+        />
+        <div class="invalid-feedback">Informe um número válido</div>
+      </div>
+
+      <div class="col-sm-6">
+        <label for="complemento">Complemento</label>
+        <input
+          type="complemento"
+          class="form-control"
+          [ngClass]="aplicaCssErro(complemento)"
+          id="complemento"
+          name="complemento"
+          [ngModel]="usuario.complemento"
+          required
+          complemento
+          #complemento="ngModel"
+        />
+        <div class="invalid-feedback">Informe um complemento válido</div>
+      </div>
     </div>
 
-    <div class="col-sm-3">
-      <label for="numero">Número</label>
-      <input
-        type="numero"
-        class="form-control"
-        [ngClass]="aplicaCssErro(numero)"
-        id="numero"
-        name="numero"
-        [ngModel]="usuario.numero"
-        required
-        numero
-        #numero="ngModel"
-      />
-      <div class="invalid-feedback">Informe um número válido</div>
+    <div class="form-group row">
+      <div class="col-sm-12">
+        <label for="rua">Rua</label>
+        <input
+          type="rua"
+          class="form-control"
+          [ngClass]="aplicaCssErro(rua)"
+          id="rua"
+          name="rua"
+          [ngModel]="usuario.rua"
+          required
+          readonly
+          rua
+          #rua="ngModel"
+        />
+        <div class="invalid-feedback">Informe um rua válida</div>
+      </div>
     </div>
 
-    <div class="col-sm-6">
-      <label for="complemento">Complemento</label>
-      <input
-        type="complemento"
-        class="form-control"
-        [ngClass]="aplicaCssErro(complemento)"
-        id="complemento"
-        name="complemento"
-        [ngModel]="usuario.complemento"
-        required
-        complemento
-        #complemento="ngModel"
-      />
-      <div class="invalid-feedback">Informe um complemento válido</div>
-    </div>
-  </div>
+    <div class="form-group row">
+      <div class="col-sm-5">
+        <label for="bairro">Bairro</label>
+        <input
+          type="bairro"
+          class="form-control"
+          [ngClass]="aplicaCssErro(bairro)"
+          id="bairro"
+          name="bairro"
+          [ngModel]="usuario.bairro"
+          readonly
+          required
+          bairro
+          #bairro="ngModel"
+        />
+        <div class="invalid-feedback">Informe um bairro válido</div>
+      </div>
 
-  <div class="form-group row">
-    <div class="col-sm-12">
-      <label for="rua">Rua</label>
-      <input
-        type="rua"
-        class="form-control"
-        [ngClass]="aplicaCssErro(rua)"
-        id="rua"
-        name="rua"
-        [ngModel]="usuario.rua"
-        required
-        readonly
-        rua
-        #rua="ngModel"
-      />
-      <div class="invalid-feedback">Informe um rua válida</div>
-    </div>
-  </div>
+      <div class="col-sm-4">
+        <label for="cidade">Cidade</label>
+        <input
+          type="cidade"
+          [ngClass]="aplicaCssErro(cidade)"
+          id="cidade"
+          name="cidade"
+          [ngModel]="usuario.cidade"
+          required
+          readonly
+          cidade
+          #cidade="ngModel"
+        />
+        <div class="invalid-feedback">Informe uma cidade válida</div>
+      </div>
 
-  <div class="form-group row">
-    <div class="col-sm-5">
-      <label for="bairro">Bairro</label>
-      <input
-        type="bairro"
-        class="form-control"
-        [ngClass]="aplicaCssErro(bairro)"
-        id="bairro"
-        name="bairro"
-        [ngModel]="usuario.bairro"
-        readonly
-        required
-        bairro
-        #bairro="ngModel"
-      />
-      <div class="invalid-feedback">Informe um bairro válido</div>
-    </div>
-
-    <div class="col-sm-4">
-      <label for="cidade">Cidade</label>
-      <input
-        type="cidade"
-        [ngClass]="aplicaCssErro(cidade)"
-        id="cidade"
-        name="cidade"
-        [ngModel]="usuario.cidade"
-        required
-        readonly
-        cidade
-        #cidade="ngModel"
-      />
-      <div class="invalid-feedback">Informe uma cidade válida</div>
-    </div>
-
-    <div class="col-sm-3">
-      <label for="estado">Estado</label>
-      <input
-        type="estado"
-        class="form-control"
-        [ngClass]="aplicaCssErro(estado)"
-        id="estado"
-        name="estado"
-        [ngModel]="usuario.estado"
-        required
-        readonly
-        estado
-        #estado="ngModel"
-      />
-      <div class="invalid-feedback">Informe um estado válido</div>
+      <div class="col-sm-3">
+        <label for="estado">Estado</label>
+        <input
+          type="estado"
+          class="form-control"
+          [ngClass]="aplicaCssErro(estado)"
+          id="estado"
+          name="estado"
+          [ngModel]="usuario.estado"
+          required
+          readonly
+          estado
+          #estado="ngModel"
+        />
+        <div class="invalid-feedback">Informe um estado válido</div>
+      </div>
     </div>
   </div>
 
