feat: adicionando preenchimento autómatico do endereco
Realizando request em webservice para preenchimento automático dos campos de CEP

--- a/forms/src/app/template-driven/template-driven.component.html
+++ b/forms/src/app/template-driven/template-driven.component.html
@@ -55,6 +55,7 @@
           required
           cep
           #cep="ngModel"
+          (blur)="buscarCep($event.target.value, f)"
         />
         <div class="invalid-feedback">Informe um CEP válido</div>
       </div>
