--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -1,1 +1,37 @@
-<p>data-driven works!</p>
+<form [formGroup]="formulario" class="form-horizontal">
+  <div class="form-group row">
+    <div class="col-sm-12">
+      <label for="nome">Nome</label>
+    </div>
+    <div class="col-sm-12">
+      <input
+        type="text"
+        class="form-control"
+        id="nome"
+        formControlName="nome"
+        placeholder="Informe seu nome"
+        required
+      />
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <div class="col-sm-12">
+      <label for="email">Email</label>
+    </div>
+
+    <div class="col-sm-12">
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        formControlName="email"
+        placeholder="nome@email.com"
+        required
+        email
+      />
+    </div>
+  </div>
+
+  <app-form-debug [form]="formulario"></app-form-debug>
+</form>
