--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formulario" class="form-horizontal">
+<form (ngSubmit)="onSubmit()" [formGroup]="formulario" class="form-horizontal">
   <div class="form-group row">
     <div class="col-sm-12">
       <label for="nome">Nome</label>
@@ -31,6 +31,10 @@
         email
       />
     </div>
+  </div>
+
+  <div class="col-sm-3 row">
+    <button type="submit" class="btn btn-primary">Enviar</button>
   </div>
 
   <app-form-debug [form]="formulario"></app-form-debug>
