--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -33,8 +33,18 @@
     </div>
   </div>
 
-  <div class="col-sm-3 row">
-    <button type="submit" class="btn btn-primary">Enviar</button>
+  <div class="row">
+    <button class="col-sm-3" type="submit" class="btn btn-primary">
+      Enviar
+    </button>
+    <button
+      class="col-sm-3"
+      style="margin-left: 5px"
+      (click)="resetar()"
+      class="btn"
+    >
+      Cancelar
+    </button>
   </div>
 
   <app-form-debug [form]="formulario"></app-form-debug>
