feat: adicionando autocomplete para cep reativo
Adicionando evento para preenchimento automático do CEP no formulário reativo com patchValue

--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -45,6 +45,7 @@
           type="cep"
           class="form-control"
           [ngClass]="aplicaCssErro('endereco.cep')"
+          (blur)="buscarCep()"
           id="cep"
           formControlName="cep"
         />
