--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -152,7 +152,7 @@
   </div>
 
   <div class="form-group row">
-    <div class="col-sm-3">
+    <div class="col-sm-4">
       <label for="Cargo">Cargo</label>
       <select
         class="form-control"
@@ -169,7 +169,7 @@
       <div class="invalid-feedback">Informe um Cargo válido</div>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
       <label for="tecnologa">Tecnologia</label>
       <select
         class="form-control"
@@ -187,6 +187,27 @@
       </select>
 
       <div class="invalid-feedback">Informe uma Tecnologia válida</div>
+    </div>
+
+    <div class="col-sm-4">
+      <label for="newsletter">Newsletter</label>
+      <div class="row form-control">
+        <div
+          class="form-check form-check-inline"
+          *ngFor="let item of newsletterOpcoes"
+        >
+          <input
+            class="form-check-input"
+            type="radio"
+            formControlName="newsletter"
+            [id]="item.nome"
+            [value]="item.nome"
+          />
+          <label class="form-check-label" [for]="item.nome">
+            {{ item.desc }}
+          </label>
+        </div>
+      </div>
     </div>
   </div>
 
