--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -211,6 +211,24 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <div class="col-sm-4 row">
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          [ngClass]="aplicaCssErro('termos')"
+          type="checkbox"
+          id="termos"
+          formControlName="termos"
+        />
+        <label class="form-check-label" for="termos"
+          >Aceito os termos de uso.
+        </label>
+        <div class="invalid-feedback">Informe uma Tecnologia válida</div>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <button class="col-sm-3" type="submit" class="btn btn-primary">
       Enviar
