--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -134,24 +134,6 @@
   </div>
 
   <div class="form-group row">
-    <div class="col-sm-3">
-      <label for="estado">Estado</label>
-      <select
-        class="form-control"
-        [ngClass]="aplicaCssErro('endereco.estado')"
-        id="estado"
-        formControlName="estado"
-      >
-        <option *ngFor="let estado of estados | async" [value]="estado.sigla">
-          {{ estado.nome }}
-        </option>
-      </select>
-
-      <div class="invalid-feedback">Informe um estado válido</div>
-    </div>
-  </div>
-
-  <div class="form-group row">
     <div class="col-sm-4">
       <label for="Cargo">Cargo</label>
       <select
@@ -170,7 +152,7 @@
     </div>
 
     <div class="col-sm-4">
-      <label for="tecnologa">Tecnologia</label>
+      <label for="tecnologia">Tecnologia</label>
       <select
         class="form-control"
         [ngClass]="aplicaCssErro('tecnologia')"
@@ -212,20 +194,14 @@
   </div>
 
   <div class="form-group row">
-    <div class="col-sm-4 row">
-      <div class="form-check form-check-inline">
-        <input
-          class="form-check-input"
-          [ngClass]="aplicaCssErro('termos')"
-          type="checkbox"
-          id="termos"
-          formControlName="termos"
-        />
-        <label class="form-check-label" for="termos"
-          >Aceito os termos de uso.
-        </label>
-        <div class="invalid-feedback">Informe uma Tecnologia válida</div>
-      </div>
+    <div class="form-check col-sm-4">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        id="termos"
+        formControlName="termos"
+      />
+      <label class="form-check-label" for="termos">Aceito os termos</label>
     </div>
   </div>
 
