--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -203,6 +203,26 @@
       />
       <label class="form-check-label" for="termos">Aceito os termos</label>
     </div>
+
+    <div class="form-check col-sm-4">
+      <div
+        *ngFor="
+          let campo of formulario.get('frameworks')?.controls;
+          let i = index
+        "
+        formArrayName="frameworks"
+      >
+        <input
+          class="form-check-input"
+          type="checkbox"
+          [id]="frameworks[i]"
+          [formControlName]="i"
+        />
+        <label class="form-check-label" [for]="frameworks[i]">
+          {{ frameworks[i] }}
+        </label>
+      </div>
+    </div>
   </div>
 
   <div class="row">
