feat: adicionando validacao personalizada de cep
Adicionando validação personalizada sem parâmetro e vendo método hasError para buscar por erros específicos em um campo

--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -44,7 +44,7 @@
         <input
           type="text"
           class="form-control"
-          [ngClass]="aplicaCssErro('endereco.cep')"
+          [ngClass]="aplicaCssErroCep('endereco.cep')"
           (blur)="buscarCep()"
           id="cep"
           formControlName="cep"
