--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -37,6 +37,26 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <div class="col-sm-12">
+      <label for="confirmar-email">Confirmar Email</label>
+    </div>
+
+    <div class="col-sm-12">
+      <input
+        type="email"
+        [ngClass]="aplicaCssErro('confirmarEmail')"
+        class="form-control"
+        id="confirmar-email"
+        formControlName="confirmarEmail"
+        placeholder="nome@email.com"
+        required
+        email
+      />
+      <div class="invalid-feedback">Confirme o email digitado acima</div>
+    </div>
+  </div>
+
   <div formGroupName="endereco">
     <div class="form-group row">
       <div class="col-sm-3">
