feat: adicionando componente de validacao com mensagem dinamica
Criação de componente para mensagem de erro dos campos de maneira dinâmica

--- a/forms/src/app/data-driven/data-driven.component.html
+++ b/forms/src/app/data-driven/data-driven.component.html
@@ -13,7 +13,10 @@
         placeholder="Informe seu nome"
         required
       />
-      <div class="invalid-feedback">Informe um nome válido</div>
+      <app-error-msg
+        [control]="formulario.get('nome')"
+        label="Nome"
+      ></app-error-msg>
     </div>
   </div>
 
