--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -3,7 +3,10 @@
     <h4>Cursos</h4>
   </div>
   <div class="card-body">
-    <table class="table table-hover">
+    <table
+      *ngIf="cursos$ | async as cursos; else loading"
+      class="table table-hover"
+    >
       <thead>
         <tr>
           <th>#</th>
@@ -29,5 +32,16 @@
         </tr>
       </tbody>
     </table>
+    <ng-template #loading>
+      <div class="text-center">
+        <div
+          class="spinner-border text-primary"
+          style="width: 3rem; height: 3rem"
+          role="status"
+        >
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
+    </ng-template>
   </div>
 </div>
