--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -28,6 +28,15 @@
           Cursos
         </a>
       </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['rxjs-poc']"
+          [routerLinkActive]="'active'"
+        >
+          RxJS POC
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
